--- a/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
+++ b/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
@@ -37,13 +37,17 @@ metadata:
 spec:
   serviceName: "hdfs-namenode"
   # Create a size-1 set. The namenode DNS name will be
-  # hdfs-namenode-0.hdfs-namenode.kube-system.svc.{{ .Values.clusterDomain }}
+  # hdfs-namenode-0.hdfs-namenode.kube-system.svc.YOUR-CLUSTER-DOMAIN
   replicas: 1
   template:
     metadata:
       labels:
         app: hdfs-namenode
     spec:
+      # Use hostNetwork so datanodes connect to namenode without going through an overlay network
+      # like weave. Otherwise, namenode fails to see physical IP address of datanodes.
+      hostNetwork: true
+      hostPID: true
       terminationGracePeriodSeconds: 0
       containers:
         - name: hdfs-namenode
