--- a/charts/hdfs-resolv-conf/templates/resolve-conf-configmap.yaml
+++ b/charts/hdfs-resolv-conf/templates/resolve-conf-configmap.yaml
@@ -13,15 +13,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Default values for template variables.
-
-# Set this to the domain name of your cluster that become part of POD and service
-# host names.
-clusterDomain: cluster.local
-
-# A list of the local disk directories on cluster nodes that will contain the datanode
-# blocks. These paths will be mounted to the datanode as K8s HostPath volumes.
-# In a command line, the list should be enclosed in '{' and '}'.
-# e.g. --set "dataNodeHostPath={/hdfs-data,/hdfs-data1}"
-dataNodeHostPath:
-  - /hdfs-data
+# Required for namenode and datanode to access kube-dns. This is required especially for datanode to
+# access namenode using the statefulset name.
+# K8s version 1.6 will fix this, per https://github.com/kubernetes/kubernetes/pull/29378.
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: hdfs-resolv-conf
+data:
+  resolv.conf: |
+    search default.svc.{{ .Values.clusterDomain }} svc.{{ .Values.clusterDomain }} {{ .Values.clusterDomain }} {{ .Values.hostNetworkDomains }}
+    nameserver {{ .Values.clusterDnsIP }}
+    options ndots:5
