--- a/charts/hdfs-datanode-k8s/values.yaml
+++ b/charts/hdfs-datanode-k8s/values.yaml
@@ -21,3 +21,11 @@
 # e.g. --set "dataNodeHostPath={/hdfs-data,/hdfs-data1}"
 dataNodeHostPath:
   - /hdfs-data
+
+# Custom hadoop configuration passed through env variables to hadoop uhopper images.
+# See https://hub.docker.com/r/uhopper/hadoop/ to get more details
+# HDFS_CONF_dfs_datanode_data_dir and CORE_CONF_fs_defaultFS need special handling and
+# they're already set by the chart so any value coming from below config will be ignored
+hadoop_env: {}
+  # Set variables through a hash where env variable is the key, e.g.
+  # HDFS_CONF_dfs_datanode_use_datanode_hostname: "false"
