s/hadoop_env/customHadoopConfig/
It is a more compliant name (camelCase) and also less confusing as
hadoop also accepts env variables. Also clarified the meaning of these
env variables so that they do not get confused with hadoop env variables

--- a/charts/hdfs-namenode-k8s/values.yaml
+++ b/charts/hdfs-namenode-k8s/values.yaml
@@ -20,10 +20,12 @@
 # volume.
 nameNodeHostPath: /hdfs-name
 
-# Custom hadoop configuration passed through env variables to hadoop uhopper images.
+# Custom hadoop config keys passed through env variables to hadoop uhopper images.
 # See https://hub.docker.com/r/uhopper/hadoop/ to get more details
+# Please note that these are not hadoop env variables, but docker env variables that
+# will be transformed into hadoop config keys
 # CLUSTER_NAME is already set by the chart so any value coming from below config
 # will be ignored
-hadoop_env: {}
+customHadoopConfig: {}
   # Set variables through a hash where env variable is the key, e.g.
   # HDFS_CONF_dfs_datanode_use_datanode_hostname: "false"
