--- a/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
+++ b/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
@@ -52,8 +52,8 @@ spec:
           env:
             - name: CLUSTER_NAME
               value: hdfs-k8s
-            # Custom hadoop_env config
-            {{- range $key, $value := .Values.hadoop_env }}
+            # We now add custom hadoop configuration provided
+            {{- range $key, $value := .Values.customHadoopConfig }}
             {{- if ne $key "CLUSTER_NAME" }}
             - name: {{ $key | quote }}
               value: {{ $value | quote }}
