--- a/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
+++ b/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
@@ -53,6 +53,13 @@ spec:
           env:
             - name: CLUSTER_NAME
               value: hdfs-k8s
+            # We now add custom hadoop configuration provided
+            {{- range $key, $value := .Values.customHadoopConfig }}
+            {{- if ne $key "CLUSTER_NAME" }}
+            - name: {{ $key | quote }}
+              value: {{ $value | quote }}
+            {{- end }}
+            {{- end }}
           ports:
           - containerPort: 8020
             name: fs
