--- a/charts/hdfs-namenode-k8s/values.yaml
+++ b/charts/hdfs-namenode-k8s/values.yaml
@@ -29,3 +29,22 @@ nameNodeHostPath: /hdfs-name
 customHadoopConfig: {}
   # Set variables through a hash where env variable is the key, e.g.
   # HDFS_CONF_dfs_datanode_use_datanode_hostname: "false"
+
+# Whether or not Kerberos support is enabled.
+kerberosEnabled: false
+
+# Required to be non-empty if Kerberos is enabled. Specify your Kerberos realm name.
+# This should match the realm name in your Kerberos config file.
+kerberosRealm: ""
+
+# Effective only if Kerberos is enabled. Name of the k8s config map containing
+# the kerberos config file.
+kerberosConfigMap: kerberos-config
+
+# Effective only if Kerberos is enabled. Name of the kerberos config file inside
+# the config map.
+kerberosConfigFileName: krb5.conf
+
+# Effective only if Kerberos is enabled. Path of the kerberos keytab file on
+# k8s cluster nodes.
+kerberosKeytabHostPath: /hdfs-credentials/hdfs.keytab
