--- a/charts/hdfs-datanode-k8s/templates/datanode-daemonset.yaml
+++ b/charts/hdfs-datanode-k8s/templates/datanode-daemonset.yaml
@@ -110,8 +110,8 @@ spec:
               mountPath: /etc/krb5.conf
               subPath: {{ .Values.kerberosConfigFileName }}
               readOnly: true
-            - name: kerberos-keytab
-              mountPath: /etc/security/hdfs.keytab
+            - name: kerberos-keytab-copy
+              mountPath: /etc/security/
               readOnly: true
             {{- if .Values.jsvcEnabled }}
             - name: jsvc-home
@@ -120,10 +120,27 @@ spec:
             {{- end }}
       {{- if and .Values.kerberosEnabled .Values.jsvcEnabled }}
       initContainers:
+        - name: copy-kerberos-keytab
+          image: busybox:1.27.1
+          command: ['sh', '-c']
+          args:
+            - cp /kerberos-keytabs/$MY_NODE_NAME.keytab /kerberos-keytab-copy/hdfs.keytab
+          env:
+            - name: MY_NODE_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
+          volumeMounts:
+            - name: kerberos-keytabs
+              mountPath: /kerberos-keytabs
+            - name: kerberos-keytab-copy
+              mountPath: /kerberos-keytab-copy
         - name: copy-jsvc
           # Pull by digest because the image doesn't have tags to pin.
           image: mschlimb/jsvc@sha256:bf20eb9a319e9a2f87473d8da7418d21503a97528b932800b6b8417cd31e30ef
-          command: ['sh', '-c', 'cp /usr/bin/jsvc /jsvc-home/jsvc']
+          command: ['sh', '-c']
+          args:
+            - cp /usr/bin/jsvc /jsvc-home/jsvc
           volumeMounts:
             - name: jsvc-home
               mountPath: /jsvc-home
@@ -146,9 +163,11 @@ spec:
         - name: kerberos-config
           configMap:
             name: {{ .Values.kerberosConfigMap }}
-        - name: kerberos-keytab
-          hostPath:
-            path: {{ .Values.kerberosKeytabHostPath }}
+        - name: kerberos-keytabs
+          secret:
+            secretName: {{ .Values.kerberosKeytabsSecret }}
+        - name: kerberos-keytab-copy
+          emptyDir: {}
         {{- if .Values.jsvcEnabled }}
         - name: jsvc-home
           emptyDir: {}
