--- a/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
+++ b/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
@@ -34,9 +34,16 @@ metadata:
   name: hdfs-namenode
 spec:
   serviceName: "hdfs-namenode"
+  {{- if .Values.namenodeHAEnabled }}
+  # Create a size-2 set. The namenode DNS names will be
+  # hdfs-namenode-0.hdfs-namenode.default.svc.YOUR-CLUSTER-DOMAIN
+  # and hdfs-namenode-1.hdfs-namenode.default.svc.YOUR-CLUSTER-DOMAIN
+  replicas: 2
+  {{ else }}
   # Create a size-1 set. The namenode DNS name will be
   # hdfs-namenode-0.hdfs-namenode.default.svc.YOUR-CLUSTER-DOMAIN
   replicas: 1
+  {{ end }}
   template:
     metadata:
       labels:
@@ -47,12 +54,49 @@ spec:
       hostNetwork: true
       hostPID: true
       dnsPolicy: ClusterFirstWithHostNet
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchExpressions:
+                  - key: "app"
+                    operator: In
+                    values:
+                    - hfds-namenode
+              topologyKey: "kubernetes.io/hostname"
       containers:
         - name: hdfs-namenode
           image: uhopper/hadoop-namenode:2.7.2
           env:
             # The following env vars are listed according to low-to-high precedence order.
             # i.e. Whoever comes last will override the earlier value of the same variable.
+            {{- if .Values.namenodeHAEnabled }}
+            - name: CORE_CONF_fs_defaultFS
+              value: hdfs://hdfs-k8s
+            # FIXME. Use all three zk-svc members.
+            - name: CORE_CONF_ha_zookeeper_quorum
+              value: zk-0.zk-svc:2888
+            - name: HDFS_CONF_dfs_nameservices
+              value: hdfs-k8s
+            - name: HDFS_CONF_dfs_ha_namenodes_hdfs___k8s
+              value: nn0,nn1
+            - name: HDFS_CONF_dfs_namenode_rpc___address_hdfs___k8s_nn0
+              value: hdfs-namenode-0.hdfs-namenode:8020
+            - name: HDFS_CONF_dfs_namenode_rpc___address_hdfs___k8s_nn1
+              value: hdfs-namenode-1.hdfs-namenode:8020
+            - name: HDFS_CONF_dfs_namenode_http___address_hdfs___k8s_nn0
+              value: hdfs-namenode-0.hdfs-namenode:50070
+            - name: HDFS_CONF_dfs_namenode_http___address_hdfs___k8s_nn1
+              value: hdfs-namenode-1.hdfs-namenode:50070
+            # FIXME. Use all three hdfs-journalnode members.
+            - name: HDFS_CONF_dfs_namenode_shared_edits_dir
+              value: qjournal://hdfs-journalnode-0.hdfs-journalnode:8485/hdfs-k8s
+            # FIXME. Enable automatic-failover.
+            - name: HDFS_CONF_dfs_ha_automatic___failover_enabled
+              value: "false"
+            - name: HDFS_CONF_dfs_ha_fencing_methods
+              value: "shell(/bin/true)"
+            {{- end }}
             {{- if .Values.kerberosEnabled }}
             - name: CORE_CONF_hadoop_security_authentication
               value: kerberos
@@ -60,13 +104,13 @@ spec:
               value: "true"
             - name: CORE_CONF_hadoop_rpc_protection
               value: privacy
-            - name:   HDFS_CONF_dfs_block_access_token_enable
+            - name: HDFS_CONF_dfs_block_access_token_enable
               value: "true"
-            - name:   HDFS_CONF_dfs_encrypt_data_transfer
+            - name: HDFS_CONF_dfs_encrypt_data_transfer
               value: "true"
             - name: HDFS_CONF_dfs_namenode_kerberos_principal
               value: hdfs/_HOST@{{ required "A valid kerberosRealm entry required!" .Values.kerberosRealm }}
-            - name:  HDFS_CONF_dfs_namenode_kerberos_https_principal
+            - name: HDFS_CONF_dfs_namenode_kerberos_https_principal
               value: http/_HOST@{{ required "A valid kerberosRealm entry required!" .Values.kerberosRealm }}
             - name: HDFS_CONF_dfs_web_authentication_kerberos_principal
               value: http/_HOST@{{ required "A valid kerberosRealm entry required!" .Values.kerberosRealm }}
@@ -79,12 +123,22 @@ spec:
             {{- end }}
             - name: CLUSTER_NAME
               value: hdfs-k8s
+          {{- if .Values.namenodeHAEnabled }}
+          command: ['/bin/sh', '-c']
+          args:
+            - if [ -x /standby-script/run.sh ]; then (cat /standby-script/run.sh); else (/entrypoint.sh /run.sh); fi
+          {{- end }}
           ports:
           - containerPort: 8020
             name: fs
           volumeMounts:
             - name: hdfs-name
               mountPath: /hadoop/dfs/name
+            {{- if .Values.namenodeHAEnabled }}
+            - name: standby-script
+              mountPath: /standby-script
+              readOnly: true
+            {{- end }}
             {{- if .Values.kerberosEnabled }}
             - name: kerberos-config
               mountPath: /etc/krb5.conf
@@ -94,8 +148,25 @@ spec:
               mountPath: /etc/security/
               readOnly: true
             {{- end }}
-      {{- if .Values.kerberosEnabled }}
       initContainers:
+      {{- if .Values.namenodeHAEnabled }}
+        - name: write-standby-script
+          image: busybox:1.27.1
+          command: ['sh', '-c']
+          args:
+            - if [ "$(echo $MY_POD_NAME | cut -c 1-15)" == "hdfs-namenode-1" ]; then (echo '#!/bin/bash' > /standby-script/run.sh); (if [ "`ls -A /hadoop/dfs/name`" == ""]; then echo 'Boostrapping standby'; echo '$HADOOP_PREFIX/bin/hdfs --config $HADOOP_CONF_DIR namenode -bootstrapStandby' > /standby-script/run.sh; fi); (echo '$HADOOP_PREFIX/bin/hdfs --config $HADOOP_CONF_DIR namenode' >> /standby-script/run.sh); (chmod +x /standby-script/run.sh); fi
+          env:
+            - name: MY_POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+          volumeMounts:
+            - name: hdfs-name
+              mountPath: /hadoop/dfs/name
+            - name: standby-script
+              mountPath: /standby-script/
+      {{- end }}
+      {{- if .Values.kerberosEnabled }}
         - name: copy-kerberos-keytab
           image: busybox:1.27.1
           command: ['sh', '-c']
@@ -112,15 +183,21 @@ spec:
             - name: kerberos-keytab-copy
               mountPath: /kerberos-keytab-copy
       {{- end }}
+      {{- if not .Values.namenodeHAEnabled }}
       # Pin the pod to a node. You can label your node like below:
       #   $ kubectl label nodes YOUR-NODE hdfs-namenode-selector=hdfs-namenode-0
       nodeSelector:
         hdfs-namenode-selector: hdfs-namenode-0
+      {{- end }}
       restartPolicy: Always
       volumes:
         - name: hdfs-name
           hostPath:
             path: {{ .Values.nameNodeHostPath }}
+        {{- if .Values.namenodeHAEnabled }}
+        - name: standby-script
+          emptyDir: {}
+        {{- end }}
         {{- if .Values.kerberosEnabled }}
         - name: kerberos-config
           configMap:
